New in version [VERSION]:

- More detailed map display and more accurate rain radar
- the amount of precipitation can be displayed in the overview chart
- various bug fixes and layout improvements

For a detailed list of changes, see https://codeberg.org/Starfish/TinyWeatherForecastGermany/src/branch/master/CHANGELOG.md